[package]
name = "rglk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rglk_game = { path = "../rglk_game" }
rglk_graphics = { path = "../rglk_graphics" }
rglk_math = { path = "../rglk_math" }
rglk_sprites = { path = "../rglk_sprites" }
rglk_storage = { path = "../rglk_storage" }

macroquad = "0.3" 
