[package]
name = "rglk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rglk_game = { path = "../rglk_game" }
rglk_graphics = { path = "../rglk_graphics" }
rogalik = { path = "../../../rogalik" }
macroquad_sprites = { path = "../macroquad_sprites" }

macroquad = "0.4" 
