[package]
name = "rglk_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rglk_events = { path = "../rglk_events" }
rglk_game = { path = "../rglk_game" }
rglk_math = { path = "../rglk_math" }
rglk_storage = { path = "../rglk_storage" }
